prevent content from overflowing out of page

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .layoutMain {
     min-height: 100vh;
+    overflow-y: auto;
     text-align: center;
 }
 
